Initial drawGrid function  and button eventlistener added to script and initial basic html added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h2>The Odin Project: Etch-a-Sketch</h2>
-
+    <h2>Etch-a-Sketch</h2>
+    <button class="btn">Draw Grid</button>
+    <div class="grid-container"></div>
+    
+    <script src="script.js"></script>
 </body>
 </html>
