Added css code to center title, button, grid horizontally

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h2>Etch-a-Sketch</h2>
-    <button class="btn">Draw Grid</button>
+    <div class="btn">
+        <button>Draw Grid</button>
+    </div>
+    
     <div class="grid-container"></div>
     
     <script src="script.js"></script>
