Added some style to button, background and grid

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h2>Etch-a-Sketch</h2>
     <div class="btn">
-        <button>Draw Grid</button>
+        <button><span>Draw Grid</span></button>
     </div>
     
     <div class="grid-container"></div>
